force-app/main/default/objects/First_Look_Agreement__c/First_Look_Agreement__c.object-meta.xml
<CustomObject>
    <label>First Look Agreement</label>
    <nameField>
        <displayFormat>FLA-{000000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Look Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>