force-app/main/default/objects/First_Look_Agreement__c/fields/Agreement_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Instructions__c</fullName>
    <description>Structured instructions copied to applicable Work Orders.</description>
    <label>Agreement Instructions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>