force-app/main/default/objects/First_Look_Agreement__c/fields/Agreement_On_File__c.field-meta.xml
<CustomField>
    <fullName>Agreement_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms the executed agreement has been received. Required before Status can be set to Active.</description>
    <label>Agreement on File</label>
    <type>Checkbox</type>
</CustomField>