force-app/main/default/objects/First_Look_Agreement__c/fields/Assigned_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>First_Look_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>