force-app/main/default/objects/First_Look_Agreement__c/fields/Authorized_Reviewing_Party__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Reviewing_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Reviewing Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>First Look Agreements</relationshipLabel>
    <relationshipName>First_Look_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>