force-app/main/default/objects/First_Look_Agreement__c/fields/Bates_Numbering_Required__c.field-meta.xml
<CustomField>
    <fullName>Bates_Numbering_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates First Look productions must be Bates numbered.</description>
    <label>Bates Numbering Required</label>
    <type>Checkbox</type>
</CustomField>