force-app/main/default/objects/First_Look_Agreement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>First Look Agreements</relationshipLabel>
    <relationshipName>First_Look_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>