force-app/main/default/objects/First_Look_Agreement__c/fields/Default_Review_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Review_Period_Days__c</fullName>
    <description>Default period used to calculate the Work Order review deadline. Required before Status can be set to Active.</description>
    <label>Default Review Period Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>