force-app/main/default/objects/First_Look_Agreement__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date the agreement begins applying. Required before Status can be set to Active.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>