force-app/main/default/objects/First_Look_Agreement__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date the agreement stops applying. Must be on or after Effective Date.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>