force-app/main/default/objects/First_Look_Agreement__c/fields/External_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Agreement_Id__c</fullName>
    <description>Source agreement identifier. Required for integrated records.</description>
    <externalId>true</externalId>
    <label>External Agreement Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>