force-app/main/default/objects/First_Look_Agreement__c/fields/FirstLookHoldFinalRelease__c.field-meta.xml
<CustomField>
    <fullName>FirstLookHoldFinalRelease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FirstLookHoldFinalRelease</label>
    <type>Checkbox</type>
</CustomField>