force-app/main/default/objects/First_Look_Agreement__c/fields/Preferred_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Method__c</fullName>
    <description>Default First Look delivery method. Final value list is TBD by Business Analysts; placeholder value provided.</description>
    <label>Preferred Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>