force-app/main/default/objects/First_Look_Agreement__c/fields/Review_Period_Day_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Period_Day_Type__c</fullName>
    <label>Review Day Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Day</fullName>
            </value>
            <value>
                <fullName>Calendar Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>