force-app/main/default/objects/First_Look_Agreement__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Agreement origin. Required for integrated records. Values assumed consistent with the Work Order Source_System__c picklist; confirm with BA.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataTrac</fullName>
            </value>
            <value>
                <fullName>Solaria</fullName>
            </value>
            <value>
                <fullName>Doculogix</fullName>
            </value>
            <value>
                <fullName>WinCopyDigital</fullName>
                <label>WinCopy Digital</label>
            </value>
            <value>
                <fullName>WinCopyRecords</fullName>
                <label>WinCopy Records</label>
            </value>
            <value>
                <fullName>CaseGator</fullName>
            </value>
            <value>
                <fullName>WinServPlus</fullName>
            </value>
            <value>
                <fullName>ProcessMaster</fullName>
            </value>
            <value>
                <fullName>ServManager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>