force-app/main/default/objects/First_Look_Agreement__c/fields/Use_Case_Manager_Pool__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Manager_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Routes notifications to the configured pool when no individual case manager is assigned.</description>
    <label>Use Case Manager Pool</label>
    <type>Checkbox</type>
</CustomField>